Bug 164421 - web export date range graphic problem
Summary: web export date range graphic problem
Status: RESOLVED FIXED
Alias: None
Product: korganizer
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-06-19 00:11 UTC by FiNeX
Modified: 2008-06-19 01:50 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
example video (212.09 KB, video/mpeg)
2008-06-19 00:12 UTC, FiNeX
Details

Note You need to log in before you can comment on or make changes to this bug.
Description FiNeX 2008-06-19 00:11:33 UTC
Version:            (using Devel)
Installed from:    Compiled sources

When you click and select a date on the date range fields, the to date fields are resized.
Comment 1 FiNeX 2008-06-19 00:12:04 UTC
Created attachment 25447 [details]
example video

Look at this video for an example.
Comment 2 Allen Winter 2008-06-19 01:50:01 UTC
SVN commit 822060 by winterz:

Give the Date widgets useful default values, else the width of KDateEdit's
can go funky. Besides, isn't having nice defaults a good thing?  Better
than empty anyhow.

BUG: 164421


 M  +7 -1      kprefsdialog.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=822060