Give the Date widgets useful default values, else the width of KDateEdit's can go funky. Besides, isn't having nice defaults a good thing?  Better than empty anyhow.

BUG: 164421

svn path=/trunk/KDE/kdepim/libkdepim/; revision=822060